--- a/style.css
+++ b/style.css
@@ -762,7 +762,7 @@ header .nav-bar {
     cursor: pointer;
     border-radius: 2px;
     text-align: center;
-    margin-right: 20px;
+    margin: 0 10px;
     margin-bottom: 15px;
 }
 
