--- a/style.css
+++ b/style.css
@@ -119,6 +119,7 @@ header .nav-bar {
 
 .Home {
     background-image: url(./assets/luke-stackpoole-TRXSkmJb40c-unsplash\ 3.png);
+    /*Uso gratuito sob a Licença da Unsplash*/
     width: 100%;
     height: 100vh;
     background-size: cover;
