--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ body {
     --g2: #fff;
     --main-color: #40E03C;
     --shadow-back: 0 5px 15px rgba(1, 0, 0, 0.7);
+    --opacity: rgba(0, 0, 0, 0.8);
 }
 
 .container {
@@ -119,7 +120,6 @@ header .nav-bar {
 
 .Home {
     background-image: url(./assets/luke-stackpoole-TRXSkmJb40c-unsplash\ 3.png);
-    /*Uso gratuito sob a Licença da Unsplash*/
     width: 100%;
     height: 100vh;
     background-size: cover;
@@ -215,7 +215,7 @@ header .nav-bar {
     background: linear-gradient(0deg, rgba(44, 191, 41, 1) 0%, rgba(64, 224, 60, 1) 100%);
 }
 
-.cont-home .botao a{
+.cont-home .botao a {
     text-decoration: none;
 }
 
@@ -318,7 +318,7 @@ header .nav-bar {
 
 /*==== Começo Sesao Serviços =======*/
 .Serviços {
-   
+
     background-color: #060606;
     width: 100%;
     display: flex;
@@ -527,31 +527,6 @@ header .nav-bar {
     border: solid 2px var(--c4);
 }
 
-.card-container::before {
-    content: "";
-    z-index: -1;
-    position: absolute;
-    inset: 0;
-    transform: translate3d(0, 0, 0) scale(0.95);
-    filter: blur(20px);
-}
-
-.card {
-    width: 100%;
-    height: 100%;
-    border-radius: inherit;
-    overflow: hidden;
-}
-
-.card .img-content {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: scale 0.6s, rotate 0.6s, filter 1s;
-}
-
 .card .img-content svg {
     width: 50px;
     height: 50px;
@@ -559,50 +534,91 @@ header .nav-bar {
     transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
 }
 
-.card .content {
+
+
+.port-item {
+    position: relative;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0 0 20 rgba(0, 0, 0, 20%);
+}
+
+.port-item .port-img img {
+    width: 100%;
+    border-radius: 10px;
+}
+
+.port-item .port-info {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 99%;
+    background-color: var(--opacity);
+    padding: 0 15px;
+    text-align: center;
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
+    align-items: center;
     gap: 10px;
-    padding: 20px;
-    line-height: 1.5;
-    border-radius: 5px;
-    opacity: 0;
-    pointer-events: none;
-    transform: translateY(50px);
-    transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
+    transform: scale(0);
+    border-radius: 10px;
+    transition: 0.4s;
+    visibility: hidden;
 }
 
-.card .content .heading {
-    font-size: 32px;
-    font-weight: 700;
-    color: var(--c1);
+.port-item:hover .port-info {
+    transform: scale(1);
+    visibility: visible;
 }
 
-.card .content p {
+.port-item .port-info h4 {
+    color: var(--c4);
+    font-family: 'Roboto', sans-serif;
+    font-size: 3.0rem;
+}
+
+.port-item .port-info p {
     color: var(--c4);
     font-family: 'Roboto', sans-serif;
 }
 
-.card:hover .content {
-    opacity: 1;
-    transform: translateY(0);
+.port-item .port-info a:hover {
+    background-color: var(--bg-color);
 }
 
-.card:hover .img-content {
-    scale: 2.5;
-    rotate: 30deg;
-    filter: blur(7px);
+
+
+
+.port-info .botao {
+    cursor: pointer;
+    margin-top: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 3px;
+    height: 50px;
+    width: 140px;
+    background: rgb(44, 191, 41);
+    background: linear-gradient(0deg, rgba(44, 191, 41, 1) 0%, rgba(64, 224, 60, 1) 100%);
 }
 
-.card:hover .img-content svg {
-    fill: transparent;
+.port-info .botao a {
+    text-decoration: none;
+    position: relative;
+    z-index: 999;
+}
+
+.port-info .botao:hover {
+    transform: scale(1.1);
+}
+
+.port-info .botao h3 {
+    font-family: 'Roboto', sans-serif;
+    text-align: center;
+    margin: 0;
+    color: #011700;
 }
 
 /*==== Fim Sesao Projetos =======*/
@@ -657,6 +673,7 @@ header .nav-bar {
 /* Footer links */
 
 .footer .footer-links {
+
     color: #ffffff;
     margin: 20px 0 12px;
     display: flex;
@@ -688,6 +705,7 @@ header .nav-bar {
 .footer .footer-center {
     width: 35%;
 }
+
 .foot {
     display: flex;
     align-items: center;
@@ -758,6 +776,7 @@ header .nav-bar {
 }
 
 .footer .footer-icons a {
+    justify-content: center;
     display: inline-block;
     cursor: pointer;
     border-radius: 2px;
@@ -956,24 +975,25 @@ header .nav-bar {
     .footer .footer-right {
         width: 100%;
     }
-    
-     .footer-links{
+
+    .footer-links {
         display: flex;
         justify-content: center;
     }
 
-    .foot{
+
+    .foot {
         justify-content: center;
         margin: 0 auto;
-      }
+    }
 
     /*======== Footer =========*/
 
-    .Serviços{
+    .Serviços {
         padding-top: 20px;
     }
 
-    .projetos{
+    .projetos {
         padding-top: 30px;
     }
 }
@@ -1099,7 +1119,7 @@ header .nav-bar {
     }
 
 
-    .Serviços{
+    .Serviços {
         padding-top: 10px;
     }
 
